--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-img": "^3.1.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^3.0.3",
     "sass": "^1.32.12"
   },
   "dependencies": {
