Squashed commit of the following:
commit 7f1930265d4baeca281242f1579b78112616aba0
Author: dulltackle <dulltackle@outlook.com>
Date:   Mon Sep 25 20:48:58 2023 +0800

    build: :heavy_plus_sign: 引入 tailwindcss

commit af2c71dd0e55f9ac42aa56f1c06ca5ea6e5ce04b
Author: dulltackle <dulltackle@outlook.com>
Date:   Mon Sep 25 20:27:25 2023 +0800

    build: :heavy_plus_sign: 引入 tailwindcss

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A landing page for tap coffee",
   "scripts": {
     "dev:css": "sass src/scss/main.scss:src/_includes/css/main.css --watch --style=compressed",
+    "dev:tailwindcss": "tailwindcss -i src/tailwindcss/main-tailwind.css -o src/_includes/css/main-tailwind.css --watch",
     "dev:11ty": "npx @11ty/eleventy --serve",
-    "dev": "npm-run-all --parallel dev:css dev:11ty",
+    "dev": "npm-run-all --parallel dev:css dev:tailwindcss dev:11ty",
     "prod:css": "sass src/scss/main.scss:src/_includes/css/main.css --style=compressed",
+    "prod:tailwindcss": "tailwindcss -i src/tailwindcss/main-tailwind.css -o src/_includes/css/main-tailwind.css --minify",
     "prod:11ty": "@11ty/eleventy",
-    "build": "npm-run-all prod:css prod:11ty"
+    "build": "npm-run-all prod:css prod:tailwindcss prod:11ty"
   },
   "author": "dulltackle",
   "license": "MIT",
@@ -17,7 +19,8 @@
     "@11ty/eleventy-img": "^3.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
-    "sass": "^1.32.12"
+    "sass": "^1.32.12",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "alpinejs": "^3.1.0"
