--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-img": "^3.1.0",
+    "@shoelace-style/shoelace": "^2.10.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.3",
     "sass": "^1.32.12",
